# Recession_Condition_Analysis_on_Social_Media_Platforms

./: README.md
project1_implementation/project-1-implementation-the_gladiators-project-1-version1/: Dockerfile  build.sh  pyproject.toml
project1_implementation/project-1-implementation-the_gladiators-project-1-version1/app/nyt/: scrapper_nyt.py
project1_implementation/project-1-implementation-the_gladiators-project-1-version1/app/nyt/config/: __init__.py  config.py
project1_implementation/project-1-implementation-the_gladiators-project-1-version1/app/reddit/: scrapper_reddit.py
project1_implementation/project-1-implementation-the_gladiators-project-1-version1/app/reddit/config/: __init__.py  config.py
project1_implementation/project-1-implementation-the_gladiators-project-1-version1/app/twitter/: scrapper_twitter.py  twitter.py
project1_implementation/project-1-implementation-the_gladiators-project-1-version1/app/twitter/config/: __init__.py  config.py
project1_implementation/project-1-implementation-the_gladiators-project-1-version1/ui/: main.py
project1_implementation/project-1-implementation-the_gladiators-project-1-version1/ui/api/: database.py  router.py
project1_proposal/: FEEDBACK.md
project1_report/project-1-report-the_gladiators-main/: FEEDBACK.md
project2_implementation/: .gitignore  README.md  build.sh  graph.py  memory_usage_graph.ipynb  nyt_graphs.ipynb  pyproject.toml  reddit_graphs  reddit_politics_graphs.ipynb  tocsv.py  twitter_graphs.ipynb
project2_implementation/app/: scrapper_reddit_politics.py
project2_implementation/app/config/: config.py
project2_implementation/ui/: main.py
project2_proposal/project-2-proposal-the_gladiators-main/: FEEDBACK.md  README.md
project3_implementation/: .flake8  README.md  build.sh  main.py  pyproject.toml  run.sh
project3_implementation/core/: __init__.py  config.py
project3_implementation/static/: mdb.min.css  style.css
project3_implementation/templates/: index.html  nytimes.html  reddit.html
project3_proposal/project-3-proposal-the_gladiators-main/: FEEDBACK.md  (+1 more)
(+2 files in other folders)
