[tool.poetry]
name = "project-3-implementation-the-gladiators"
version = "0.1.0"
description = ""
authors = ["Harshad <hbhandwaldar@gmail.com>"]
readme = "README.md"
packages = [{include = "project_3_implementation_the_gladiators"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
textblob = "^0.17.1"
wordcloud = "^1.8.2.2"
isort = "^5.11.2"
flake8 = "^6.0.0"
black = "^22.12.0"
mypy = "^0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
